--- a/matchmaking/package.json
+++ b/matchmaking/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@fastify/cors": "^11.0.1",
     "@fastify/websocket": "^11.0.2",
     "fastify": "^5.3.0",
     "sqlite3": "^5.1.7"
