--- a/matchmaking/package.json
+++ b/matchmaking/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@fastify/cors": "^11.0.1",
     "@fastify/websocket": "^11.0.2",
+    "dotenv": "^16.5.0",
     "fastify": "^5.3.0",
     "sqlite3": "^5.1.7"
   },
