--- a/matchmaking/.gitignore
+++ b/matchmaking/.gitignore
@@ -1,4 +1,4 @@
 node_modules
 certs
-matchmaking/localhost+2-key.pem
-matchmaking/localhost+2.pem
+./matchmaking/localhost+2-key.pem
+./matchmaking/localhost+2.pem
