--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "dependencies": {
     "@fastify/cors": "^11.0.1",
     "@fastify/websocket": "^11.0.2",
+    "better-sqlite3": "^11.10.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "fastify": "^5.3.0",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^22.14.1",
     "@types/sqlite3": "^3.1.11",
     "ts-node": "^10.9.2",
