--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "fastify": "^5.3.0",
+    "jsonwebtoken": "^9.0.2",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.14.1",
     "@types/sqlite3": "^3.1.11",
     "ts-node": "^10.9.2",
