--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "fastify": "^5.3.0",
+    "fetch": "^1.1.0",
     "jsonwebtoken": "^9.0.2",
     "sqlite3": "^5.1.7"
   },
